--- a/css/index.css
+++ b/css/index.css
@@ -200,10 +200,57 @@ footer {
 /*  Tablet view */
 @media (max-width: 800px) {
 
+    .container {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+header {
+    display: flex;
+    flex-direction: column; 
+    flex-flow: wrap;
+    justify-content: center;
+}
+.logo {
+    order: -1;
+}
+
+nav {
+    width: 100%;
+    padding: 2% 10%;
+}
+.introimg {
+    display: none;
+}
+
+.intro-container {
+    width: 100%;
+display: flex;
+flex-direction: column;
+flex-flow: wrap;
+justify-content: center;
+}
+
+.bottom-content .vision {
+    width: 31%;
+}
+
 }
 
 /* Phone view */ 
 @media (max-width: 500px) {
+    header {
+        display: flex;
+        flex-direction: column; 
+        flex-flow: wrap;
+    }
+    
+    .intro {
 
+    }
+
+    .introimg {
+        display: none;
+    }
 
 }
