--- a/css/index.css
+++ b/css/index.css
@@ -238,19 +238,59 @@ justify-content: center;
 }
 
 /* Phone view */ 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
+
+    .container {
+        max-width: 80%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin: 0 auto;
+    }
+
     header {
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
         flex-flow: wrap;
-    }
-    
-    .intro {
-
+        justify-content: center;
     }
 
-    .introimg {
-        display: none;
-    }
+nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+nav a {
+    display: flex;
+    justify-content: center;
+    padding: 4% 0%;
+    border-top: 1px solid gray;
+}
+
+nav a#contact {
+    border-bottom: 1px solid gray;
+}
+
+.top-content .features {
+    width: 100%;
+    margin-bottom: 5%;
+}
+
+.top-content .about {
+    width: 100%;
+}
+
+.bottom-content .services {
+    width: 100%;
+    margin-bottom: 5%;
+}
+.bottom-content .product {
+    width: 100%;
+    margin: 0% 0% 5% 0%;
+}
+.bottom-content .vision {
+    width: 100%;
+}
 
 }
